# openenclave

./: Azure.DCAP.Windows.nupkg  CHANGELOG.md  CMakeLists.txt
api/: annotated.html  classes.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_type.html  host_8h__incl.md5  report_8h.html  report_8h_a2b338bee894e153389ce35a08a494b52.html  report_8h_a445fd88b3d209d8456e85a2c2fbebb43.html  report_8h_a56870385dcc823e03c80cd66cd42625c.html  report_8h_a82c5bf0cacb3810016e2ff21d8570750.html  report_8h_ae25693bea0e36f79769455d6e6de59cd.html  report_8h_aeb7315f5ba69737a3935d65f7cf0675b.html  report_8h_source.html  result_8h.html  result_8h_a082933eedd558d91d480c569fa8d1a48.html  result_8h_source.html  struct__oe__claim.html  struct__oe__datetime.html  struct__oe__policy.html  struct__oe__uuid__t.html  types_8h.html  types_8h_a006169e35b8b5eeb840dbca52490b010.html  types_8h_a531e85a911baf1138c1e670755108657.html  types_8h_a6612be80073caa74285acc6b0279170f.html  types_8h_a95f050e146ca454664cd0283e130397d.html  types_8h_ab7977cbd56716f8839315932d5f0f280.html  types_8h_acb9a002e429e9071300cbcf31f388689.html  types_8h_adc11218c00dea326781dae46a5cb0601.html  types_8h_ade70955979f02fc1f0dd8fd34f51f5ff.html  types_8h_ade811d495805a2e563e2b5f921b3aad7.html  types_8h_source.html
common/: attest_plugin.c  datetime.c  oe_host_socket.h  oe_host_string.h
debugger/debugrt/host/: host.c
enclave/crypto/: rsa.c
ext/: CMakeLists.txt  ext.c
host/: traceh.c
host/sgx/: calls.c
host/windows/: syscall.c
include/openenclave/: host_verify.h
include/openenclave/attestation/: verifier.h
include/openenclave/ext/: ext.h  extension.h  policy.h  signature.h
include/openenclave/internal/: appid.h  appsig.h  extension.h  rsa.h  signature.h
samples/attestation/: Makefile
samples/attested_tls/: AttestedTLSREADME.md
samples/attested_tls/common/: cert_verifier.cpp  verify_callback.cpp
samples/attested_tls/non_enc_client/: client.cpp
samples/host_verify/: host.c  sgx_cert_rsa.der
tests/: CMakeLists.txt
tests/attestation_cert_apis/enc/: enc.cpp
tests/attestation_cert_apis/host/: host.cpp
tests/attestation_plugin_cert/: README.md
tests/attestation_plugin_cert/enc/: enc.cpp
tests/attestation_plugin_cert/host/: host.cpp
tests/crypto/: read_file.c  readfile.h
tests/crypto/enclave/host/: host.c
tests/echo/: echo.edl
tests/echo/enc/: enc.c
tests/echo/host/: host.c
tests/file/host/: host.cpp
tests/host_verify/host/: host.cpp
tests/libcxx/host/: host.cpp
tests/libunwind/host/: host.cpp
tests/mbed/host/: host.c  ocalls.c
tests/ocall/host/: host.cpp
tests/oeapp/: CMakeLists.txt  oeapp.edl
tests/oeapp/enc/: CMakeLists.txt  enc.c
tests/oeapp/host/: CMakeLists.txt  host.c
tests/oeedger8r/host/: teststring.cpp
tests/oeext/: CMakeLists.txt  oeext.edl
tests/oeext/enc/: CMakeLists.txt  enc.c
tests/oeext/host/: CMakeLists.txt  host.c
tests/pingpong/: pingpong.edl
tests/pingpong-shared/: pingpong.edl
tests/pingpong-shared/host/: host.cpp
tests/pingpong/host/: host.cpp
tests/report/common/: tests.cpp
tests/report/host/: host.cpp
tests/stack_smashing_protector/host/: host.cpp
tests/switchless/host/: host.c
tests/switchless_threads/host/: host.c
tests/tools/oecert/host/: host.cpp
tests/tools/oecertdump/host/: host.cpp
tools/: CMakeLists.txt
tools/oeapp/: CMakeLists.txt  main.c
tools/oeext/: CMakeLists.txt  main.c
tools/oesign/: getopt_long.c  main.c
tools/oesignext/: CMakeLists.txt  extension.h  main.c
tools/oeverify/: oeverify.c
